<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenScoreboard</string>
    <string name="home">Home</string>
    <string name="away">Visitor</string>
    <string name="quarter">Quarter</string>
    <string name="game_clock">Game Clock</string>
    <string name="shot_clock">Shot Clock</string>
    <string name="start_game_clock">Start Game</string>
    <string name="stop_game_clock">Stop Game</string>
    <string name="reset_score">Reset Score</string>
    <string name="reset_game_clock">Reset Clock</string>
    <string name="reset_quarter">Reset Quarter</string>
    <string name="set_game_time">Set</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="doubleZero">00</string>
    <string name="separator">&#8226;</string>
    <string name="Value">Enter Value</string>
    <string name="Minutes">Minutes</string>
    <string name="Seconds">Seconds</string>
    <string name="ssid">Set SSID</string>
    <string name="password">Set Password</string>
    <string name="Cancel">Cancel</string>
    <string name="setTime">Set Time</string>
    <string name="setNetwork">Set Network Data</string>
    <string name="setPeriod">Set Period Time</string>
    <string name="wifiSettings">Wifi Setup</string>
</resources>
